--- a/templates/cms/cms_login.html
+++ b/templates/cms/cms_login.html
@@ -1,7 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,31 +13,32 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="icon" href="{{url_for('static',filename='cms/img/test.ico')}}">
+    <link rel="icon" href="{{url_for('static',filename='cms/img/test.ico')}}">
 
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static',filename='cms/css/sigin.css') }}" rel="stylesheet">
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <div class="container">
-      <form class="form-signin" method="post">
+<div class="container">
+    <form class="form-signin" method="post">
         <h2 class="form-signin-heading">请登录</h2>
+
         <label for="inputEmail" class="sr-only">邮箱：</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="邮箱" name="email" required autofocus>
         <label for="inputPassword" class="sr-only">密码：</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="密码" name="password" required>
         <div class="checkbox">
-          <label>
-            <input type="checkbox" value="1" name="remember">记住我
-          </label>
+            <label>
+                <input type="checkbox" value="1" name="remember">记住我
+            </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">立即登录</button>
-      </form>
-        {% if message %}
-            <p style="text-align: center;" class="text-danger">{{ message }}</p>
-        {% endif %}
-    </div> <!-- /container -->
-  </body>
+    </form>
+    {% if message%}
+    <p style="text-align: center" class="text-danger">{{message}}</p>
+    {% endif %}
+</div> <!-- /container -->
+</body>
 </html>
