完成修改密码页面

--- a/templates/cms/cms_resetpwd.html
+++ b/templates/cms/cms_resetpwd.html
@@ -11,6 +11,7 @@
         width: 300px;
     }
 </style>
+<script src="{{static('cms/js/resetpwd.js')}}"></script>
 {% endblock %}
 
 {% block  page_title %}
@@ -18,4 +19,30 @@
 {% endblock%}
 
 {% block main_content %}
+<form action="" method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <div class="form-container">
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">旧密码</span>
+                <input type="password" class="form-control" name="oldpwd" placeholder="请输入旧密码">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">新密码</span>
+                <input type="password" class="form-control" name="newpwd" placeholder="请输入新密码">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">确认新密码</span>
+                <input type="password" class="form-control" name="newpwd2" placeholder="请输入确认密码">
+            </div>
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary" id="submit">立即保存</button>
+        </div>
+    </div>
+</form>
 {% endblock %}
