--- a/templates/cms/cms_base.html
+++ b/templates/cms/cms_base.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" href="{{ static('cms/img/test.ico') }}">
     <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{{ static('cms/css/base.css') }}">
     <script src="{{ static('cms/js/base.js') }}"></script>
-    <link rel="icon" href="{{url_for('static',filename='cms/img/test.ico')}}">
+    <script src="{{ static('common/zlajax.js') }}"></script>
+    <link rel="stylesheet" href="{{ static('common/sweetalert/sweetalert.css') }}">
+    <script src="{{ static('common/sweetalert/sweetalert.min.js') }}"></script>
+    <script src="{{ static('common/sweetalert/zlalert.js') }}"></script>
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -24,12 +28,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Python论坛CMS管理系统</a>
+            <a class="navbar-brand" href="#">知了课堂论坛CMS管理系统</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">{{ g.cms_user.username }}<span>[超级管理员]</span></a></li>
-                <li><a href="{{url_for('cms.logout')}}">注销</a></li>
+                <li><a href="{{ url_for('cms.logout') }}">注销</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="查找...">
@@ -44,10 +48,10 @@
             <ul class="nav-sidebar">
                 <li class="unfold"><a href="#">首页</a></li>
                 <li class="profile-li">
-                    <a href="">个人中心<span></span></a>
+                    <a href="#">个人中心<span></span></a>
                     <ul class="subnav">
                         <li><a href="{{ url_for('cms.profile') }}">个人信息</a></li>
-                        <li><a href="{{url_for('cms.resetpwd')}}">修改密码</a></li>
+                        <li><a href="{{ url_for('cms.resetpwd') }}">修改密码</a></li>
                         <li><a href="#">修改邮箱</a></li>
                     </ul>
                 </li>
