--- a/templates/cms/cms_base.html
+++ b/templates/cms/cms_base.html
@@ -18,41 +18,40 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">知了课堂论坛CMS管理系统</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">知了课堂论坛CMS管理系统</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">{{ g.cms_user.username }}<span>[超级管理员]</span></a></li>
-                <li><a href="{{ url_for('cms.logout') }}">注销</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="查找...">
-            </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">{{ g.cms_user.username }}<span>[超级管理员]</span></a></li>
+            <li><a href="{{ url_for('cms.logout') }}">注销</a></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="查找...">
+          </form>
         </div>
-    </div>
-</nav>
+      </div>
+    </nav>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav-sidebar">
+    <div class="container-fluid">
+      <div class="row">
+          <div class="col-sm-3 col-md-2 sidebar">
+              <ul class="nav-sidebar">
                 <li class="unfold"><a href="#">首页</a></li>
                 <li class="profile-li">
                     <a href="#">个人中心<span></span></a>
                     <ul class="subnav">
                         <li><a href="{{ url_for('cms.profile') }}">个人信息</a></li>
                         <li><a href="{{ url_for('cms.resetpwd') }}">修改密码</a></li>
-                        <li><a href="{{url_for('cms.resetemail')}}">修改邮箱</a></li>
+                        <li><a href="{{ url_for('cms.resetemail') }}">修改邮箱</a></li>
                     </ul>
                 </li>
 
@@ -66,14 +65,14 @@
                 <li class="nav-group cmsuser-manage"><a href="#">CMS用户管理</a></li>
                 <li class="cmsrole-manage"><a href="#">CMS组管理</a></li>
             </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          </div>
+          <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>{% block page_title %}{% endblock %}</h1>
             <div class="main_content">
                 {% block main_content %}{% endblock %}
             </div>
-        </div>
+          </div>
+      </div>
     </div>
-</div>
 </body>
 </html>
