--- a/templates/cms/cms_base.html
+++ b/templates/cms/cms_base.html
@@ -18,34 +18,35 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">知了课堂论坛CMS管理系统</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Python论坛CMS管理系统</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">{{ g.cms_user.username }}<span>[超级管理员]</span></a></li>
-            <li><a href="{{ url_for('cms.logout') }}">注销</a></li>
-          </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="查找...">
-          </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{url_for('cms.profile')}}">{{g.cms_user.username}}</a></li>
+                <li><a href="{{ url_for('cms.logout') }}">注销</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <input type="text" class="form-control" placeholder="查找...">
+            </form>
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="container-fluid">
-      <div class="row">
-          <div class="col-sm-3 col-md-2 sidebar">
-              <ul class="nav-sidebar">
-                <li class="unfold"><a href="#">首页</a></li>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+            <ul class="nav-sidebar">
+                <li class="unfold"><a href="{{ url_for('cms.index') }}">首页</a></li>
                 <li class="profile-li">
                     <a href="#">个人中心<span></span></a>
                     <ul class="subnav">
@@ -54,25 +55,41 @@
                         <li><a href="{{ url_for('cms.resetemail') }}">修改邮箱</a></li>
                     </ul>
                 </li>
+                {% set cms_user = g.cms_user %}
 
-                <li class="nav-group post-manage"><a href="#">帖子管理</a></li>
-                <li class="comments-manage"><a href="#">评论管理</a></li>
-                <li class="board-manage"><a href="#">板块管理</a></li>
+                {% if cms_user.has_permission(CMSPermission.POSTER) %}
+                <li class="nav-group post-manage"><a href="{{url_for('cms.posts')}}">帖子管理</a></li>
+                {% endif%}
 
-                <li class="nav-group user-manage"><a href="#">用户管理</a></li>
-                <li class="role-manage"><a href="#">组管理</a></li>
+                {% if cms_user.has_permission(CMSPermission.COMMENTER) %}
+                <li class="comments-manage"><a href="{{url_for('cms.comments')}}">评论管理</a></li>
+                {% endif %}
 
-                <li class="nav-group cmsuser-manage"><a href="#">CMS用户管理</a></li>
-                <li class="cmsrole-manage"><a href="#">CMS组管理</a></li>
+                {% if cms_user.has_permission(CMSPermission.BOARDER) %}
+                <li class="board-manage"><a href="{{url_for('cms.boards')}}">板块管理</a></li>
+                {% endif %}
+
+                {% if cms_user.has_permission(CMSPermission.FRONTUSER) %}
+                <li class="nav-group user-manage"><a href="{{url_for('cms.fusers')}}">前台用户管理</a></li>
+                {% endif %}
+
+                {% if cms_user.has_permission(CMSPermission.CMSUSER) %}
+                <li class="nav-group cmsuser-manage"><a href="{{url_for('cms.cusers')}}">CMS用户管理</a></li>
+                {% endif %}
+
+                {% if cms_user.is_developer %}
+                <li class="cmsrole-manage"><a href="{{url_for('cms.croles')}}">CMS组管理</a></li>
+                {% endif %}
+
             </ul>
-          </div>
-          <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>{% block page_title %}{% endblock %}</h1>
             <div class="main_content">
                 {% block main_content %}{% endblock %}
             </div>
-          </div>
-      </div>
+        </div>
     </div>
+</div>
 </body>
 </html>
