--- a/templates/cms/cms_profile.html
+++ b/templates/cms/cms_profile.html
@@ -8,41 +8,49 @@
 {% endblock %}
 
 {% block main_content %}
-    {% set user= g.cms_user %}
-    <table class="table table-bordered">
-        <tbody>
-            <tr>
-                <td>
-                    用户名：
-                </td>
-                <td>
-                    {{user.username}}
-                </td>
-            </tr>
-        <tr>
-            <td>
-                邮箱：
-            </td>
-            <td>
-                {{user.email}}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                角色：
-            </td>
-            <td>
-                暂未实现
-            </td>
-        </tr>
-        <tr>
-            <td>权限:</td>
-            <td>暂未实现</td>
-        </tr>
-        <tr>
-            <td>加入时间：</td>
-            <td>{{user.join_time}}</td>
-        </tr>
-        </tbody>
-    </table>
+{% set user= g.cms_user %}
+<table class="table table-bordered">
+    <tbody>
+    <tr>
+        <td>
+            用户名：
+        </td>
+        <td>
+            {{user.username}}
+        </td>
+    </tr>
+    <tr>
+        <td>
+            邮箱：
+        </td>
+        <td>
+            {{user.email}}
+        </td>
+    </tr>
+    <tr>
+        <td>
+            角色：
+        </td>
+        <td>
+            {% for role in user.roles %}
+                {{role.name}}
+                {% if not loop.last %},{% endif %}
+            {% endfor %}
+        </td>
+    </tr>
+    <tr>
+        <td>权限:</td>
+        <td>
+             {% for role in user.roles %}
+                {{role.desc}}
+                {% if not loop.last %}/{% endif %}
+            {% endfor %}
+        </td>
+    </tr>
+    <tr>
+        <td>加入时间：</td>
+        <td>{{user.join_time}}</td>
+    </tr>
+    </tbody>
+</table>
 {% endblock %}
